Style add-book section

--- a/index.html
+++ b/index.html
@@ -17,8 +17,15 @@
     <!--material icon use <i class="material-icons">cloud</i> -->
     <div class="body-grid">
       <div class="spacer-top"></div>
-      <div class="container-name"></div>
-      <div class="container-button"></div>
+      <div class="container-names-library">
+        <span>Maggie Thomas Asper's</span>
+        <span>Library</span>
+      </div>
+      <div class="container-button">
+        <span class="material-icons md-96">add_box</span>
+        <span>Add</span>
+        <span>Book</span>
+      </div>
       <div class="spacer-bottom"></div>
       <div class="container-books"></div>
       <div class="container-status"></div>
