Add books to grid, cleanup name and button style

--- a/index.html
+++ b/index.html
@@ -27,7 +27,35 @@
         <span>Book</span>
       </div>
       <div class="spacer-bottom"></div>
-      <div class="container-books"></div>
+      <div class="container-bookshelf">
+        <div class="book">
+          <div class="book-name">198Q</div>
+          <div class="book-author">Gary Buse</div>
+          <div class="book-pages">123</div>
+        </div>
+        <div class="book">
+          <div class="book-name">For Tomorrow</div>
+          <div class="book-author">Landis Marquee</div>
+          <div class="book-pages">84</div>
+        </div>
+        <div class="book">
+          <div class="book-name">
+            Return: Horatio the Elder, and academic treaty on the dead
+          </div>
+          <div class="book-author">Aquinas Alboveia of Margo</div>
+          <div class="book-pages">5023</div>
+        </div>
+        <div class="book">
+          <div class="book-name"></div>
+          <div class="book-author"></div>
+          <div class="book-pages">15023</div>
+        </div>
+        <div class="book"></div>
+        <div class="book"></div>
+        <div class="book"></div>
+        <div class="book"></div>
+        <div class="book"></div>
+      </div>
       <div class="container-status"></div>
     </div>
   </body>
