Create fucntional/scalable formatting for book containers

--- a/index.html
+++ b/index.html
@@ -29,32 +29,71 @@
       <div class="spacer-bottom"></div>
       <div class="container-bookshelf">
         <div class="book">
-          <div class="book-name">198Q</div>
-          <div class="book-author">Gary Buse</div>
-          <div class="book-pages">123</div>
-        </div>
-        <div class="book">
-          <div class="book-name">For Tomorrow</div>
-          <div class="book-author">Landis Marquee</div>
-          <div class="book-pages">84</div>
-        </div>
-        <div class="book">
+          <div class="book-author"><span>Yves Meynard</span></div>
           <div class="book-name">
-            Return: Horatio the Elder, and academic treaty on the dead
+            <span>The Book of Kights</span>
           </div>
-          <div class="book-author">Aquinas Alboveia of Margo</div>
-          <div class="book-pages">5023</div>
+          <div class="book-pages"><span>277</span></div>
         </div>
         <div class="book">
-          <div class="book-name"></div>
-          <div class="book-author"></div>
-          <div class="book-pages">15023</div>
+          <div class="book-author"><span>Winthrop Sargeant</span></div>
+          <div class="book-name">
+            <span>The Bhagavad Gita </span>
+          </div>
+          <div class="book-pages"><span>700</span></div>
         </div>
-        <div class="book"></div>
-        <div class="book"></div>
-        <div class="book"></div>
-        <div class="book"></div>
-        <div class="book"></div>
+        <div class="book">
+          <div class="book-author"><span>Gene Wolfe</span></div>
+          <div class="book-name">
+            <span
+              >The Island of Doctor Death and Other Stories and Other
+              Stories</span
+            >
+          </div>
+          <div class="book-pages"><span>410</span></div>
+        </div>
+        <div class="book">
+          <div class="book-author">
+            <span>Yevgeny Zamyatin, Clarence Brown (Translator)</span>
+          </div>
+          <div class="book-name">
+            <span>We</span>
+          </div>
+          <div class="book-pages"><span>226</span></div>
+        </div>
+        <div class="book">
+          <div class="book-author">
+            <span> Harold Abelson, Gerald Jay Sussman, Julie Sussman</span>
+          </div>
+          <div class="book-name">
+            <span>Structure and Interpretation of Computer Programs</span>
+          </div>
+          <div class="book-pages"><span>1657</span></div>
+        </div>
+        <div class="book">
+          <div class="book-author"><span>David G. Hartwell</span></div>
+          <div class="book-name">
+            <span>Age of Wonders: Exploring the World of Science Fiction</span>
+          </div>
+          <div class="book-pages"><span>224</span></div>
+        </div>
+        <div class="book">
+          <div class="book-author"><span>Jack Williamson</span></div>
+          <div class="book-name">
+            <span>Wonder's Child: My Life in Science Fiction</span>
+          </div>
+          <div class="book-pages"><span>276</span></div>
+        </div>
+        <div class="book">
+          <div class="book-author"><span>Don Herron</span></div>
+          <div class="book-name">
+            <span
+              >The Dark Barbarian: The Writings of Robert E. Howard: A Critical
+              Anthology</span
+            >
+          </div>
+          <div class="book-pages"><span>242</span></div>
+        </div>
       </div>
       <div class="container-status"></div>
     </div>
