Finalize css html mockup, now make lunch

--- a/index.html
+++ b/index.html
@@ -28,21 +28,21 @@
       </div>
       <div class="spacer-bottom"></div>
       <div class="container-bookshelf">
-        <div class="book">
+        <div class="book book-unread">
           <div class="book-author"><span>Yves Meynard</span></div>
           <div class="book-name">
             <span>The Book of Kights</span>
           </div>
-          <div class="book-pages"><span>277</span></div>
+          <div class="book-pages unread"><span>277</span></div>
         </div>
         <div class="book">
           <div class="book-author"><span>Winthrop Sargeant</span></div>
           <div class="book-name">
             <span>The Bhagavad Gita </span>
           </div>
-          <div class="book-pages"><span>700</span></div>
+          <div class="book-pages read"><span>700</span></div>
         </div>
-        <div class="book">
+        <div class="book book-unread">
           <div class="book-author"><span>Gene Wolfe</span></div>
           <div class="book-name">
             <span
@@ -50,16 +50,16 @@
               Stories</span
             >
           </div>
-          <div class="book-pages"><span>410</span></div>
+          <div class="book-pages unread"><span>410</span></div>
         </div>
-        <div class="book">
+        <div class="book book-unread">
           <div class="book-author">
             <span>Yevgeny Zamyatin, Clarence Brown (Translator)</span>
           </div>
           <div class="book-name">
             <span>We</span>
           </div>
-          <div class="book-pages"><span>226</span></div>
+          <div class="book-pages unread"><span>226</span></div>
         </div>
         <div class="book">
           <div class="book-author">
@@ -68,23 +68,23 @@
           <div class="book-name">
             <span>Structure and Interpretation of Computer Programs</span>
           </div>
-          <div class="book-pages"><span>1657</span></div>
+          <div class="book-pages read"><span>1657</span></div>
         </div>
         <div class="book">
           <div class="book-author"><span>David G. Hartwell</span></div>
           <div class="book-name">
             <span>Age of Wonders: Exploring the World of Science Fiction</span>
           </div>
-          <div class="book-pages"><span>224</span></div>
+          <div class="book-pages read"><span>224</span></div>
         </div>
         <div class="book">
           <div class="book-author"><span>Jack Williamson</span></div>
           <div class="book-name">
             <span>Wonder's Child: My Life in Science Fiction</span>
           </div>
-          <div class="book-pages"><span>276</span></div>
+          <div class="book-pages read"><span>276</span></div>
         </div>
-        <div class="book">
+        <div class="book book-unread">
           <div class="book-author"><span>Don Herron</span></div>
           <div class="book-name">
             <span
@@ -92,10 +92,19 @@
               Anthology</span
             >
           </div>
-          <div class="book-pages"><span>242</span></div>
+          <div class="book-pages unread">
+            <span class>242</span>
+          </div>
         </div>
       </div>
-      <div class="container-status"></div>
+      <div class="container-status">
+        <div class="status-read">
+          <span>Read</span><span class="read-color"></span>
+        </div>
+        <div class="status-unread">
+          <span>Unread</span><span class="unread-color"></span>
+        </div>
+      </div>
     </div>
   </body>
 </html>
