Muck about and strip it all out

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
         <span>Library</span>
       </div>
       <div class="container-button">
-        <img src="assets/square-plus.svg" class="button button-open" />
+        <img src="assets/square-plus.png" class="button button-open" />
+        <div class="button-shadow"></div>
         <span>Add</span>
         <span>Book</span>
       </div>
