Create hidden-template for books

--- a/index.html
+++ b/index.html
@@ -58,73 +58,21 @@
       </dialog>
       <div class="spacer-bottom"></div>
       <div class="container-bookshelf">
-        <div class="book book-unread">
+        <div class="hidden-book">
+          <div class="book">
+            <div class="book-author"><span></span></div>
+            <div class="book-name">
+              <span></span>
+            </div>
+            <div class="book-pages"><span></span></div>
+          </div>
+        </div>
+        <div class="book">
           <div class="book-author"><span>Yves Meynard</span></div>
           <div class="book-name">
             <span>The Book of Kights</span>
           </div>
-          <div class="book-pages unread"><span>277</span></div>
-        </div>
-        <div class="book">
-          <div class="book-author"><span>Winthrop Sargeant</span></div>
-          <div class="book-name">
-            <span>The Bhagavad Gita </span>
-          </div>
-          <div class="book-pages read"><span>700</span></div>
-        </div>
-        <div class="book book-unread">
-          <div class="book-author"><span>Gene Wolfe</span></div>
-          <div class="book-name">
-            <span
-              >The Island of Doctor Death and Other Stories and Other
-              Stories</span
-            >
-          </div>
-          <div class="book-pages unread"><span>410</span></div>
-        </div>
-        <div class="book book-unread">
-          <div class="book-author">
-            <span>Yevgeny Zamyatin, Clarence Brown (Translator)</span>
-          </div>
-          <div class="book-name">
-            <span>We</span>
-          </div>
-          <div class="book-pages unread"><span>226</span></div>
-        </div>
-        <div class="book">
-          <div class="book-author">
-            <span> Harold Abelson, Gerald Jay Sussman, Julie Sussman</span>
-          </div>
-          <div class="book-name">
-            <span>Structure and Interpretation of Computer Programs</span>
-          </div>
-          <div class="book-pages read"><span>1657</span></div>
-        </div>
-        <div class="book">
-          <div class="book-author"><span>David G. Hartwell</span></div>
-          <div class="book-name">
-            <span>Age of Wonders: Exploring the World of Science Fiction</span>
-          </div>
-          <div class="book-pages read"><span>224</span></div>
-        </div>
-        <div class="book">
-          <div class="book-author"><span>Jack Williamson</span></div>
-          <div class="book-name">
-            <span>Wonder's Child: My Life in Science Fiction</span>
-          </div>
-          <div class="book-pages read"><span>276</span></div>
-        </div>
-        <div class="book book-unread">
-          <div class="book-author"><span>Don Herron</span></div>
-          <div class="book-name">
-            <span
-              >The Dark Barbarian: The Writings of Robert E. Howard: A Critical
-              Anthology</span
-            >
-          </div>
-          <div class="book-pages unread">
-            <span class>242</span>
-          </div>
+          <div class="book-pages read"><span>277</span></div>
         </div>
       </div>
       <div class="container-status">
