Inject keys from book in array to inner html text

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <div class="book-pages"><span></span></div>
           </div>
         </div>
-        <div class="book">
+        <div id="book-demo" class="book">
           <div class="book-author"><span>Yves Meynard</span></div>
           <div class="book-title">
             <span>The Book of Kights</span>
