--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       </dialog>
       <div class="spacer-bottom"></div>
       <div class="container-bookshelf">
-        <div id="book" class="hidden-book">
+        <div id="book-hidden" class="book-hidden">
           <div class="book">
             <div class="book-author"><span></span></div>
             <div class="book-title">
@@ -77,7 +77,7 @@
             <div class="book-pages"><span></span></div>
           </div>
         </div>
-        <div id="book-demo" class="book">
+        <div class="demo">
           <div class="book-author"><span>Yves Meynard</span></div>
           <div class="book-title">
             <span>The Book of Kights</span>
