Refactor default sorting and library construction

--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
       <div class="container-bookshelf">
         <div id="book-hidden" class="book-hidden">
           <div class="book">
-            <div class="book-author"><span></span></div>
-            <div class="book-title">
+            <div class="book-author listener"><span></span></div>
+            <div class="book-title listener">
               <span></span>
             </div>
-            <div class="book-pages"><span></span></div>
+            <div class="book-pages listener"><span></span></div>
           </div>
         </div>
         <div class="demo">
