Add alphabetize sort by author forward and reverse

--- a/index.html
+++ b/index.html
@@ -67,14 +67,16 @@
         </fieldset>
       </dialog>
       <div class="spacer-bottom"></div>
-      <div class="container-bookshelf">
+      <div class="container-bookshelf" id="container-bookshelf">
         <div id="book-hidden" class="book-hidden">
           <div class="book">
-            <div class="book-author listener"><span></span></div>
-            <div class="book-title listener">
+            <div class="book-author author-listen">
+              <span class="author-listen"></span>
+            </div>
+            <div class="book-title">
               <span></span>
             </div>
-            <div class="book-pages listener"><span></span></div>
+            <div class="book-pages"><span></span></div>
           </div>
         </div>
         <div class="demo">
