Add gradiated sorting for remaing object categories

--- a/index.html
+++ b/index.html
@@ -73,10 +73,12 @@
             <div class="book-author author-listen">
               <span class="author-listen"></span>
             </div>
-            <div class="book-title">
-              <span></span>
+            <div class="book-title title-listen">
+              <span class="title-listen"></span>
             </div>
-            <div class="book-pages"><span></span></div>
+            <div class="book-pages page-listen">
+              <span class="page-listen"></span>
+            </div>
           </div>
         </div>
         <div class="demo">
