Modify book card info with clickable highlighted elements

--- a/index.html
+++ b/index.html
@@ -70,23 +70,23 @@
       <div class="container-bookshelf" id="container-bookshelf">
         <div id="book-hidden" class="book-hidden">
           <div class="book">
-            <div class="book-author author-listen">
+            <div class="book-author author-listen clickable">
               <span class="author-listen"></span>
             </div>
-            <div class="book-title title-listen">
+            <div class="book-title title-listen clickable">
               <span class="title-listen"></span>
             </div>
-            <div class="book-pages page-listen">
+            <div class="book-pages page-listen clickable">
               <span class="page-listen"></span>
             </div>
           </div>
         </div>
         <div class="demo">
-          <div class="book-author"><span>Yves Meynard</span></div>
-          <div class="book-title">
+          <div class="book-author clickable"><span>Yves Meynard</span></div>
+          <div class="book-title clickable">
             <span>The Book of Kights</span>
           </div>
-          <div class="book-pages read"><span>277</span></div>
+          <div class="book-pages read clickable"><span>277</span></div>
         </div>
       </div>
       <div class="container-status">
