--- a/index.html
+++ b/index.html
@@ -71,13 +71,14 @@
       </dialog>
       <div class="spacer-bottom"></div>
       <div class="container-bookshelf" id="container-bookshelf">
-        <div id="book-hidden" class="book-hidden">
+        <div id="book-hidden" class="hidden">
           <div class="book">
             <div class="book-author author-listen clickable">
               <span class="author-listen"></span>
             </div>
             <div class="book-title title-listen clickable">
               <span class="title-listen"></span>
+              <span class="remove-prompt hidden">Remove Book</span>
             </div>
             <div class="book-pages page-listen clickable">
               <span class="page-listen"></span>
@@ -85,11 +86,16 @@
           </div>
         </div>
         <div class="demo">
-          <div class="book-author clickable"><span>Yves Meynard</span></div>
-          <div class="book-title clickable">
-            <span>The Book of Kights</span>
+          <div class="book-author author-listen clickable">
+            <span class="author-listen">Yves Meynard</span>
           </div>
-          <div class="book-pages read clickable"><span>277</span></div>
+          <div class="book-title title-listen clickable">
+            <span class="title-listen">The Book of Kights</span>
+            <span class="remove-prompt hidden">Remove Book</span>
+          </div>
+          <div class="book-pages read page-listen clickable">
+            <span class="page-listen">277</span>
+          </div>
         </div>
       </div>
       <div class="container-status">
