--- a/index.html
+++ b/index.html
@@ -85,16 +85,18 @@
             </div>
           </div>
         </div>
-        <div class="demo">
-          <div class="book-author author-listen clickable">
-            <span class="author-listen">Yves Meynard</span>
-          </div>
-          <div class="book-title title-listen clickable">
-            <span class="title-listen">The Book of Kights</span>
-            <span class="remove-prompt hidden">Remove Book</span>
-          </div>
-          <div class="book-pages read page-listen clickable">
-            <span class="page-listen">277</span>
+        <div id="demo">
+          <div class="demo">
+            <div class="book-author author-listen clickable">
+              <span class="author-listen">Yves Meynard</span>
+            </div>
+            <div class="book-title title-listen clickable">
+              <span class="title-listen">The Book of Kights</span>
+              <span class="remove-prompt hidden">Remove Book</span>
+            </div>
+            <div class="book-pages read page-listen clickable">
+              <span class="page-listen">277</span>
+            </div>
           </div>
         </div>
       </div>
