Sort read and unread toggling state with associated color buttons

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="body-grid">
       <div class="spacer-top"></div>
       <div class="container-names-library">
-        <span>Maggie Thomas Asper's</span>
+        <span id="name" contenteditable="true">Name</span>
         <span>Library</span>
       </div>
       <div class="container-button">
