--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <div class="book-author author-listen clickable">
               <span class="author-listen">Yves Meynard</span>
             </div>
-            <div class="book-title title-listen clickable">
+            <div class="book-title title-listen clickable library-except">
               <span class="title-listen">The Book of Kights</span>
               <span class="remove-prompt hidden">Remove Book</span>
             </div>
