Create function to catch NaN input on pages and return 0

--- a/index.html
+++ b/index.html
@@ -17,7 +17,13 @@
   <body>
     <!--material icon use <i class="material-icons">cloud</i> -->
     <div class="body-grid">
-      <div class="spacer-top"></div>
+      <div class="spacer-top">
+        <img
+          class="time-button"
+          src="assets/hourglass_top_FILL0_wght400_GRAD0_opsz48.svg"
+          alt=""
+        />
+      </div>
       <div class="container-names-library">
         <span id="name" contenteditable="true">Name</span>
         <span>Library</span>
@@ -94,7 +100,7 @@
               <span class="title-listen">The Book of Kights</span>
               <span class="remove-prompt hidden">Remove Book</span>
             </div>
-            <div class="book-pages read page-listen clickable">
+            <div class="book-pages read page-listen clickable library-except">
               <span class="page-listen">277</span>
             </div>
           </div>
